@@ -1,3 +1,7 @@
 # SystemsChangeLog
 
 Just a generic program to keep track of all the changes on the networks I manage.
+
+As of v1.2.0 you may now also import and view logs created by the Eventlog to
+    Syslog Service hosted at Google Code
+    (https://code.google.com/p/eventlog-to-syslog/)
