@@ -1,11 +1,10 @@
 #ifndef MAINWINDOW_H
 #define MAINWINDOW_H
 
-#include "eventlogviewer.h"
 #include "filterbydialog.h"
 #include <QInputDialog>
-#include <QMainWindow>
 #include <QMessageBox>
+#include <QMainWindow>
 
 namespace Ui {
 class MainWindow;
@@ -38,6 +37,7 @@ private slots:
     void on_actionExport_Records_By_triggered();
 
     void on_actionBrowse_Logs_triggered();
+
     void on_actionWindows_Event_Logs_triggered();
 };
 
