@@ -87,6 +87,12 @@
     <layout class="QFormLayout" name="deviceIDFormLayout">
      <item row="0" column="0">
       <widget class="QLabel" name="deviceIDLabel">
+       <property name="font">
+        <font>
+         <weight>75</weight>
+         <bold>true</bold>
+        </font>
+       </property>
        <property name="text">
         <string>Device ID:</string>
        </property>
@@ -145,7 +151,7 @@
      <rect>
       <x>400</x>
       <y>90</y>
-      <width>195</width>
+      <width>200</width>
       <height>31</height>
      </rect>
     </property>
@@ -155,6 +161,12 @@
      </item>
      <item row="0" column="0">
       <widget class="QLabel" name="timeInLabel">
+       <property name="font">
+        <font>
+         <weight>75</weight>
+         <bold>true</bold>
+        </font>
+       </property>
        <property name="text">
         <string>Time Started:</string>
        </property>
@@ -167,13 +179,19 @@
      <rect>
       <x>400</x>
       <y>150</y>
-      <width>219</width>
+      <width>224</width>
       <height>29</height>
      </rect>
     </property>
     <layout class="QFormLayout" name="timeOutFormLayout">
      <item row="0" column="0">
       <widget class="QLabel" name="timeOutLabel">
+       <property name="font">
+        <font>
+         <weight>75</weight>
+         <bold>true</bold>
+        </font>
+       </property>
        <property name="text">
         <string>Time Completed:</string>
        </property>
