@@ -1,3 +1,10 @@
+09-13-2015:
+            v1.2.0 released
+            Can now display Windows Event Logs generated by the Eventlog to
+                Syslog Service hosted at Google Code
+                (https://code.google.com/p/eventlog-to-syslog/)
+            Can now view details about individual log entries
+
 09-11-2015:
             v1.1.2 released
             Reports can be generated using a custom template
